--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ font-weight: 600;
 .contact{width:100%;}
 .company-info{width:100%;}
   body,html{overflow-x:hidden!important;}
-
+ .bg-dark{margin-top: -30px;}
   
   .camera {
     width: 38px;
