--- a/style.css
+++ b/style.css
@@ -448,11 +448,44 @@ font-weight: 600;
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
 
-.contact{width:100%;}
-.company-info{width:100%;}
-  body,html{overflow-x:hidden!important;}
- .bg-dark{margin-top: -30px;}
+.contact{width:100%;height:376px;}
+.company-info{width:100%;height:376px;}
+  body,html{overflow:hidden!important;}
+	  .bg-dark{margin-top: -30px;height:35px;}
+	  .cont{padding:15px 0 !important;}
+	  
+	  .contact-detail{position: relative;
+    top: -58px;
+
+}
+
+
+#edit-button{width:12px;}
+	
+	
+.btns {
+    width: 106px;
+    font-weight: 600;
+height: 34px;}
+
+#edit{margin-top: 9px!important;
+    font-size: 17px;
+}
+
+#edit{    margin-top: 11px!important;}
+.pics{width:120px;height:120px;margin-top: -51px;}
+
+#mob{position: relative!important;
+  left: -23px!important;}
   
+  #mail{position: relative!important;
+  left: -23px!important;}
+
+.flx6 {
+    position: relative;
+    left: -2px;
+top: -32px;}
+
   .camera {
     width: 38px;
     height: 38px;
@@ -460,13 +493,15 @@ font-weight: 600;
     border-radius: 50%;
     padding: 6px;
     position: absolute;
-    left: 229px;
-    top: 301px;}
+   left: 186px;
+    top: 194px;}
 	
 	.wrapper{display:flex;}
-	legend{    font-size: 19px!important;
+	
+	legend{    font-size: 17px!important;margin-bottom: 20px!important;
     margin-left: -37px;white-space:nowrap;}
-	label{font-size:17px;}
+	
+	label{font-size:11px!important;}
 	
 	    .flx1{position: relative;
     left: -2px;
@@ -488,7 +523,7 @@ font-weight: 600;
 }
 
 	    .flx7{position: relative;
-    left: -2px;
+    left: -2px;top: 10px;
 }
 
 #update {
@@ -497,27 +532,45 @@ font-weight: 600;
     line-height: 3px;
     color: #000;
     margin-left: 81px;
-    margin-top: 20px;
+    margin-top: 19px;
+    line-height: 16px!important;
+    height: 32px!important;
+width:100px!important;
+    position: relative !important;
+    top: -52px !important;
 }
 
 .contact form button, .contact form input, .contact form textarea {
-    position: relative;
+    position: relative!important;    height: 25px !important;
+    padding: 10px;top:-45px!important;
     margin-left: 135px;}
 	
 	#selectbasic {
     margin-left: 135px;
-    top: -43px;
+    top: -43px;    height: 25px !important;
+    padding: 10px;
     position: relative;
 }
 	.heading {
     font-weight: 800;
-    font-size: 33px;}
+    font-size: 24px;
+	position: relative;
+    top: 0px;
+	}
 	
 	.contact form label {
+    font-size: 12px;
+    /* margin-top: -21px !important; */
+    position: relative;
+    top: -14px;
+
     display: block;
     margin-top: -29px;
     margin-left: -14px;
 }
+
+
+
 	
   }
   
@@ -525,12 +578,12 @@ font-weight: 600;
   
   @media only screen 
   and (min-device-width: 700px) 
-  and (max-device-width: 731px) 
+  and (max-device-width: 751px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
   
 .contact {
-    width: 390px;}
+    width: 422px;}
 	
 	.company-info {
     width: 306px!important;
@@ -553,22 +606,30 @@ font-weight: 600;
     width: 100px;
     position: relative;}
 	
+	.flx7 {
+    position: relative;
+    left: -2px;
+    top: 10px;
+}
+	
 	#bts {
     position: relative;
     top: -80.5px;
     line-height: 16px;
-    color: #000;
-    width: 80px;
-    width: 46px!important;
+    color: #000;height: 27px!important;
+    width: 63px!important;
     height: 37px;
-    left: 89px;
+    left: 88px;
+    top: -72px !important;
     box-shadow: none;
-    font-size: 7px;}
+    white-space: nowrap !important;
+    font-size: 11px;
+    line-height: 10px;}
 	
 	#for {
-    position: relative;
-    top: -117px;
-    left: 268px;
+ left: 279px;
+    position: relative!important;
+    top: -97px !important;
     margin-left: -23px;
     width: 43%!important;}
 	
@@ -577,18 +638,20 @@ font-weight: 600;
     line-height: 16px;
     color: #000;
     box-shadow: none;
-  
-    width: 50px !important;
-    height: 39px;
-    line-height: 12px;
-    left: 182px;
+  width:37px!important;
+       line-height: 8px;
+    left: 202px;
+    font-size: 10px;
+    height: 27px !important;
+    top: -124px !important;
+
 }
 
 .tick {
     position: relative;
-    top: -76px;
+  top: -70px;
     width: 23px;
-    left: 245px;
+    left: 225px;
 }
 	
 
@@ -601,7 +664,7 @@ font-weight: 600;
   and (max-device-width: 650px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
-  label{font-size:14px!important;}
+  label{font-size:11px!important;}
   
   .camera {
     width: 38px;
@@ -610,9 +673,12 @@ font-weight: 600;
     border-radius: 50%;
     padding: 6px;
     position: absolute;
-    left: 219px;
-    top: 244px;
+  left: 194px;
+    top: 141px;
+
 }
+
+.bt{    margin-top: -16px;}
   
   .contact form button, .contact form input, .contact form textarea {
     position: relative;
@@ -623,7 +689,7 @@ font-weight: 600;
 }
 #selectbasic {
     margin-left: 65px;
-    top: -32px;width: 117px !important;
+    width: 117px !important;
     position: relative;
     height: 36px;}
 	
@@ -644,21 +710,24 @@ font-weight: 600;
     }
 	legend{    margin-bottom: 20px !important;}
 	
-	#bts {
+#bts {
     position: relative;
     top: -68.5px;
-    line-height: 16px;
+    line-height: 5px;
     color: #000;
     width: 80px;
     width: 48px !important;
     height: 33px;
     white-space: nowrap;
-    left: 70px;
+    left: 71px;
+    height: 26px!important;
+    top: -74px !important;
     box-shadow: none;
-    font-size: 8px;}
+    font-size: 8px;
+}
 	
 	legend {
-    width: 100%;
+    width: 100%;margin-bottom: 32px !important;
     position: relative;
     top: -16px;}
 	
@@ -671,9 +740,10 @@ font-weight: 600;
 	
 	#for {
     position: relative;
-    top: -102px;
-    left: 36px;
+       top: -99px !important;
+    left: 38px;
     margin-left: 153px;
+  
     width: 43%!important;
 }
 
@@ -682,12 +752,13 @@ font-weight: 600;
     line-height: 16px;
     color: #000;
     box-shadow: none;
-    width: 54px;
+ 
     width: 44px !important;
     height: 36px;
     font-size: 10px;
-    line-height: 12px;
-    left: 163px;}
+    line-height: 6px;
+    left: 173px;
+    top: -127px !important;}
 	
 	.tick {
     position: relative;
@@ -715,7 +786,7 @@ font-weight: 600;
     padding: 5px 58x;
     position: relative;
     padding: 4px 10px;
-     left: 68px;
+    left: 68px;
     top: -20px;}
 	
 	
@@ -749,12 +820,14 @@ font-weight: 600;
 	
 	#bts {
     position: relative;
-    top: -80.5px;left:73px;
-    line-height: 16px;
-    color: #000;    font-size: 9px !important;
+ top: -71px !important;
+    left: 76px;
+    line-height: 14px;
+    color: #000;
+    font-size: 11px !important;
     width: 80px!important;
-    height: 37px !important;
-    width: 55px!important;}
+    height: 29px !important;
+    width: 66px!important;}
 	
 	#mob{position: relative;
     left: -29px;}
@@ -763,9 +836,11 @@ font-weight: 600;
     left: -29px;}
 	
 	#for {
+
     position: relative;
     top: -117px;
-    left: 70px;
+    left: 83px;
+    top: -98px!important;
     margin-left: 165px;
     width: 43%!important;}
 	
@@ -777,12 +852,13 @@ font-weight: 600;
     width: 54px;
     width: 53px!important;
     height: 38px;
-    line-height: 12px;
-    left: 190px;}
+    line-height: 9px;
+    left: 201px;
+    top: -123px !important;}
 	
 	.tick {
     position: relative;
-    top: -76px;
+    top: -71px;
     width: 23px;
     left: 214px;}
 	
@@ -793,8 +869,9 @@ font-weight: 600;
     border-radius: 50%;
     padding: 6px;
     position: absolute;
-    left: 265px;
-    top: 261px;
+    left: 241px;
+    top: 157px;
+
 }
 	
 	
