--- a/style.css
+++ b/style.css
@@ -526,6 +526,7 @@ top: -32px;}
     left: -2px;top: 10px;
 }
 
+
 #update {
     width: 141px;
     font-size: 20px;
@@ -534,8 +535,10 @@ top: -32px;}
     margin-left: 81px;
     margin-top: 19px;
     line-height: 16px!important;
-    height: 32px!important;
-width:100px!important;
+    height: 27px!important;
+    width: 89px!important;
+    line-height: 8px !important;
+    font-size: 14px !important;
     position: relative !important;
     top: -52px !important;
 }
