--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ font-weight: 600;
 	  .cont{padding:15px 0 !important;}
 	  
 	  .contact-detail{position: relative;
-    top: -58px;
+    top: -58px;margin-bottom: 25px !important;
 
 }
 
