--- a/style.css
+++ b/style.css
@@ -447,7 +447,62 @@ font-weight: 600;
   and (max-device-width: 875px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
+	  
+	  ::placeholder{font-size:10px!important;}
+	  .bt {
+    background: linear-gradient(to bottom,#fad961,#d8af1a) !important;
+    width: 102px;
+    box-shadow: 0 2px 2px rgb(0 0 0 / 10%), 0 4px 4px rgb(0 0 0 / 10%), 0 6px 6px rgb(0 0 0 / 10%), 0 8px 8px rgb(0 0 0 / 10%);
+    height: 28px;
+    color: #000;
+    border: none;
+    line-height: 29px;
+    font-weight: 600;
+    border-radius: 5px;
+    font-size: 19px;
+	  margin-top: -12px;}
+	  
+	  .box {
+    border: 2px solid #708591;
+    width: 140px;
+    font-weight: 600;
+    white-space: nowrap;
+    height: 33px;
+    font-size: 17px;
+    color: #49631b;
+    position: relative;
+    top: -26px;
+    left: -24px;
+    /* margin-top: -32px !important; */
+    padding: 1px 11px;
+    border-radius: 5px;
+	  background: #b9ed70;}
+	  
+	  .club {
+    background: #49631b;
+    color: yellow;
+    padding: 2px 6px;
+    position: relative;
+    top: 0px;
+    left: 32px;
+    border-radius: 0 5px 5px 0;
+}
 
+.point {
+    border-radius: 0 5px 5px 0;
+    background: #49631b;
+    color: yellow;
+    left: 11px;
+    padding: 3px 10px;
+    position: relative;
+    top: 0px;
+}
+.box2 {    font-size: 17px!important;
+    position: relative;
+    padding: 1px 11px!important;
+    left: 41px!important;
+    top: -28px!important;
+}
 .contact{width:100%;height:376px;}
 .company-info{width:100%;height:376px;}
   body,html{overflow:hidden!important;}
@@ -455,9 +510,11 @@ font-weight: 600;
 	  .cont{padding:15px 0 !important;}
 	  
 	  .contact-detail{    position: relative;
-    top: -67px;
+    top: -45px;
     margin-bottom: 18px !important;
-	  }
+
+
+}
 
 
 #edit-button{width:12px;}
@@ -472,7 +529,7 @@ height: 34px;}
     font-size: 17px;
 }
 
-#edit{    margin-top: 11px!important;}
+#edit{    margin-top: 4px!important;}
 .pics{width:106px;height:106px;margin-top: -51px;}
 
 #mob{position: relative!important;
@@ -487,14 +544,14 @@ height: 34px;}
 top: -32px;}
 
   .camera {
-    width: 38px;
-    height: 38px;
+        width: 28px;
+    height: 28px;
     background: white;
     border-radius: 50%;
     padding: 6px;
     position: absolute;
-   left: 186px;
-    top: 194px;}
+    left: 186px;
+    top: 138px;}
 	
 	.wrapper{display:flex;}
 	
@@ -507,32 +564,33 @@ top: -32px;}
     left: -2px;
 }
   	    .flx2{position: relative;
-    left: -2px;
+    left: -2px;    top: 9px;
+
 }
 	    .flx3{position: relative;
-    left: -2px;
+    left: -2px;top: 18px;
 }
 	    .flx4{position: relative;
-    left: -2px;
+    left: -2px;top: 27px;
 }
 	    .flx5{position: relative;
-    left: -2px;
+    left: -2px;top: 35px;
 }
 	    .flx6{position: relative;
-    left: -2px;
+    left: -2px;top:-2px;
 }
 
 	    .flx7{position: relative;
-    left: -2px;top: 10px;
+    left: -2px;top: 53px;
 }
 
 
-#update {
+    #update {
     width: 141px;
     font-size: 20px;
     line-height: 3px;
     color: #000;
-    margin-left: 81px;
+    margin-left: 125px;
     margin-top: 19px;
     line-height: 16px!important;
     height: 23px!important;
@@ -545,14 +603,14 @@ top: -32px;}
 }
 
 .contact form button, .contact form input, .contact form textarea {
-    position: relative!important;    height: 25px !important;
-    padding: 10px;top:-45px!important;
+    position: relative!important;   height: 15px !important;
+    padding: 7px;top:-45px!important;
     margin-left: 135px;}
 	
 	#selectbasic {
     margin-left: 135px;
-    top: -43px;    height: 25px !important;
-    padding: 10px;
+    top: -43px;    height: 15px !important;
+    padding: 7px;
     position: relative;
 }
 	.heading {
@@ -566,7 +624,7 @@ top: -32px;}
     font-size: 12px;
     /* margin-top: -21px !important; */
     position: relative;
-    top: -14px;
+    top: -18px;
 
     display: block;
     margin-top: -29px;
@@ -587,7 +645,7 @@ top: -32px;}
   and (orientation: landscape) {
   
 .contact {
-    width: 391px;}
+    width: 423px;}
 	
 	.company-info {
     width: 306px!important;
@@ -613,49 +671,50 @@ top: -32px;}
 	.flx7 {
     position: relative;
     left: -2px;
-    top: 10px;
+    top: 56px;
 }
 	
 	#bts {
-    position: relative;
+        position: relative;
     top: -80.5px;
     line-height: 16px;
-    color: #000;height: 27px!important;
-    width: 63px!important;
+    color: #000;
+    height: 17px!important;
+    width: 52px!important;
     height: 37px;
-    left: 88px;
-    top: -72px !important;
+    left: 62px;
+    top: -67px !important;
     box-shadow: none;
     white-space: nowrap !important;
     font-size: 11px;
-    line-height: 10px;}
+    line-height: 6px;}
 	
 	#for {
- left: 279px;
+ left: 269px;
     position: relative!important;
-    top: -97px !important;
+    top: -87px !important;
     margin-left: -23px;
     width: 43%!important;}
 	
 	#bts2 {
-    top: -156px;
+       top: -156px;
     line-height: 16px;
     color: #000;
     box-shadow: none;
-  width:37px!important;
-       line-height: 8px;
-    left: 202px;
+    width: 37px!important;
+    line-height: 4px;
+    left: 194px;
     font-size: 10px;
-    height: 27px !important;
-    top: -124px !important;
-
+    height: 17px !important;
+    top: -109px !important
 }
 
 .tick {
-    position: relative;
-  top: -70px;
-    width: 23px;
+       position: relative;
+    top: -67px;
+    width: 19px;
     left: 225px;
+
 }
 	
 
@@ -665,14 +724,14 @@ top: -32px;}
   
     @media only screen 
   and (min-device-width: 630px) 
-  and (max-device-width: 650px) 
+  and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
   label{font-size:11px!important;}
   
   .camera {
-    width: 38px;
-    height: 38px;
+    width: 28px;
+    height: 28px;
     background: white;
     border-radius: 50%;
     padding: 6px;
@@ -700,17 +759,21 @@ top: -32px;}
 	.flx7 {
     position: relative;
     left: -2px;
-    top: 12px;
+    top: 50px;
 }
 
-.box2{position: relative;
+.box2{
     padding: 4px 10px;
-    left: 23px;
-    top: -9px;}
+   }
+	.box{    position: relative!important;
+    top: -13px!important;
+    left: -14px!important;}
 	
-	.box{position: relative;
-    top: -7px;
-    left: -9px;
+.box2 {
+    position: relative!important;
+    padding: 4px 10px;
+    left: 70px!important;
+    top: -13px!important;
     }
 	legend{    margin-bottom: 20px !important;}
 	
@@ -723,11 +786,12 @@ top: -32px;}
     width: 48px !important;
     height: 33px;
     white-space: nowrap;
-    left: 71px;
-    height: 26px!important;
-    top: -74px !important;
+      left: 53px;
+    height: 17px!important;
+    top: -69px !important;
     box-shadow: none;
     font-size: 8px;
+
 }
 	
 	legend {
@@ -740,11 +804,11 @@ top: -32px;}
     font-size: 20px;
     line-height: 3px;
     color: #000;
-    margin-left: 25px;}
+    margin-left: 80px;}
 	
 	#for {
     position: relative;
-       top: -99px !important;
+       top: -86px !important;
     left: 38px;
     margin-left: 153px;
   
@@ -756,19 +820,20 @@ top: -32px;}
     line-height: 16px;
     color: #000;
     box-shadow: none;
- 
-    width: 44px !important;
+    width: 39px !important;
     height: 36px;
     font-size: 10px;
-    line-height: 6px;
-    left: 173px;
-    top: -127px !important;}
+    line-height: 2px;
+    left: 167px;
+    height: 17px!important;
+    top: -109px !important;}
 	
 	.tick {
-    position: relative;
-    top: -66px;
-    width: 23px;
-    left: 194px;}
+      position: relative;
+    top: -65px;
+    width: 16px;
+    left: 168px;
+}
   
   }
   
@@ -784,6 +849,8 @@ top: -32px;}
     width: 110px;
     font-size: 20px;
     color: #49631b;
+	    position: relative !important;
+    left: 144px !important;
     white-space: nowrap;
     font-weight: 600;
     height: 33px;
@@ -819,19 +886,19 @@ top: -32px;}
     font-size: 20px;
     line-height: 3px;
     color: #000;
-    margin-left: 37px;
+    margin-left: 121px;
     margin-top: 20px;}
 	
 	#bts {
-    position: relative;
- top: -71px !important;
-    left: 76px;
-    line-height: 14px;
+top: -67px !important;
+    left: 54px;
+    line-height: 2px;
     color: #000;
+    /* width: 7px!important; */
     font-size: 11px !important;
     width: 80px!important;
-    height: 29px !important;
-    width: 66px!important;}
+    height: 16px !important;
+    width: 58px!important;}
 	
 	#mob{position: relative;
     left: -29px;}
@@ -842,9 +909,9 @@ top: -32px;}
 	#for {
 
     position: relative;
-    top: -117px;
-    left: 83px;
-    top: -98px!important;
+left: 75px;
+    top: -85px!important;
+
     margin-left: 165px;
     width: 43%!important;}
 	
@@ -854,21 +921,25 @@ top: -32px;}
     color: #000;
     box-shadow: none;
     width: 54px;
-    width: 53px!important;
+    width: 40px!important;
     height: 38px;
-    line-height: 9px;
-    left: 201px;
-    top: -123px !important;}
+    line-height: 4px;
+    font-size: 11px!important;
+    left: 189px;
+    height: 17px!important;
+    top: -107px !important;
+}
 	
 	.tick {
-    position: relative;
-    top: -71px;
-    width: 23px;
-    left: 214px;}
+position: relative;
+    top: -67px;
+    width: 16px;
+    left: 214px;
+}
 	
 	.camera {
-    width: 38px;
-    height: 38px;
+    width: 28px;
+    height: 28px;
     background: white;
     border-radius: 50%;
     padding: 6px;
@@ -880,6 +951,20 @@ top: -32px;}
 	
 	
   
+  }
+
+    @media only screen 
+  and (min-device-width: 870px) 
+  and (max-device-width: 873px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+.box2 {
+    border: 2px solid #708591;
+    width: 110px;
+    font-size: 20px;
+    color: #49631b;
+    position: relative !important;
+left: 169px !important;}
   }
 
 
