--- a/style.css
+++ b/style.css
@@ -526,9 +526,11 @@ font-weight: 600;
 	
 	
 .btns {
-    width: 106px;
+width: 88px;
     font-weight: 600;
-height: 34px;}
+    height: 27px;
+    margin-top: 0px;
+    font-size: 15px;}
 
 #edit{margin-top: 9px!important;
     font-size: 17px;
