--- a/style.css
+++ b/style.css
@@ -962,7 +962,6 @@ position: relative;
 
 
 
-
 @media only screen and (max-width: 600px) {
 .company-info {
     width: 326px;height:305px;border-radius:0!important;}
@@ -970,7 +969,127 @@ position: relative;
 	.contact{width: 326px;
     height: 485px;
 }
-body,html{overflow-x:hidden;}
+.main-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
+}
+.btns {
+    width: 89px;
+    font-weight: 600;
+    height: 29px;
+    white-space: nowrap;
+    font-size: 14px;
+    /* padding: 12px 24px; */
+    border: 1px solid #415057;
+border-radius: 5px;}
+.bt {
+    background: linear-gradient(to bottom,#fad961,#d8af1a) !important;
+    width: 132px;
+    box-shadow: 0 2px 2px rgb(0 0 0 / 10%), 0 4px 4px rgb(0 0 0 / 10%), 0 6px 6px rgb(0 0 0 / 10%), 0 8px 8px rgb(0 0 0 / 10%);
+    height: 26px;
+    color: #000;
+    border: none;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-top: -15px;
+    font-size: 15px;
+    width: 83px!important;
+}
+.tick {
+    position: relative;
+    top: -52px;
+    width: 14px;
+    left: 200px;
+}
+#mob{    margin-left: 60px;}
+
+#for {
+    position: relative;
+    top: -74px;
+    left: 45px;
+    margin-left: 165px;
+    width: 43%!important;
+}
+
+.flx7 {
+  margin-top: -139px;
+    position: relative;
+    left: 2px;
+    top: 70px;
+
+}
+
+#mail{margin-left: 60px;}
+
+#bts2 {
+    top: -98px;
+    line-height: 16px;
+    color: #000;
+    box-shadow: none;
+    width: 54px;
+    height: 20px;
+    line-height: 3px;
+    left: 169px;
+    font-size: 9px;
+    width: 37px!important;
+}
+#edit{font-size: 16px;margin-top:20px!important;}
+#edit-button{width:16px;}
+
+.contact form button, .contact form input, .contact form textarea {
+    position: relative;
+    margin-left: 81px;
+    top: -30px;
+    width: 100%;
+    width: 132px !important;
+    height: 20px;
+    padding: 8px !important;
+    padding: 1em;
+    border: solid 1px #000;
+    border-radius: 4px;
+}
+
+#selectbasic {
+    margin-left: 82px;
+    top: -27px;
+    position: relative;
+    width: 132px!important;
+    height: 20px;
+    padding: 8px!important;
+}
+.flx6 {
+    margin-top: -29px;
+    position: relative;
+    left: 0px;
+    top: 16px;
+}
+
+#bts {
+    position: relative;
+    top: -53.5px;
+    line-height: 7px;
+    color: #000;
+    width: 80px;
+    height: 21px;
+    white-space: nowrap !important;
+    left: 75px;
+    width: 47px !important;
+    box-shadow: none;
+    font-size: 8px;
+}
+
+#update {
+    width: 110px;
+    font-size: 16px;
+    line-height: 3px;
+    height: 25px !important;
+    color: #000;
+    margin-left: 100px;
+    width: 91px!important;
+    margin-top: 20px;
+}
+
 .heading {
     font-weight: 800;
     font-size: 26px;
@@ -1033,8 +1152,8 @@ border-radius: 0 5px 5px 0;}
     border-radius: 50%;
     padding: 6px;
     position: absolute;
-    left: 211px;
-    top: 243px;
+      left: 208px;
+    top: 194px;
 }
 
 .pics {
@@ -1055,11 +1174,11 @@ user-select: none;}
     color: #6f7272;
     font-weight: 800!important;
     margin-bottom: 0.5rem;
-    font-size: 21px!important;
+    font-size: 16px!important;
 }
 label {
     white-space: nowrap;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 600;
     color: #000;
 }
@@ -1075,23 +1194,86 @@ label {
 
 .flx2 {
     position: relative;
-    left: -1px;
+    left: -1px;top:5px;
 }
 
 .flx3 {
     position: relative;
-    left: -1px;
+    left: -1px;top:5px;
 }
 
 .flx4 {
     position: relative;
-    left: -1px;
+    left: -1px;top:10px;
 }
 
 .flx5 {
     position: relative;
-    left: -1px;
+    left: -1px;top:11px;
 }
+
+
+	}
+	
+	
+	@media only screen and (max-width: 416px) and (min-width: 400px) {
+.company-info {
+    width: 375px!important;
+ 
+    border-radius: 0!important;
+}
+
+.camera {
+    width: 30px;
+    height: 30px;
+    background: white;
+    border-radius: 50%;
+    padding: 6px;
+    position: absolute;
+    left: 231px;
+    top: 197px;
+}
+.contact{width: 375px!important;}
+
+.box2 {
+    border: 2px solid #708591;
+    width: 110px;
+    font-size: 15px;
+    color: #49631b;
+    white-space: nowrap;
+    font-weight: 600;
+    height: 33px;
+    padding: 5px 58x;
+    position: relative;
+    padding: 2px 7px;
+left: 137px;}
+
+
+}
+
+	@media only screen and (max-width: 380px) and (min-width: 370px) {
+.company-info {
+width: 338px!important;}
+
+.contact {
+width: 338px!important;}
+
+.box2 {
+    border: 2px solid #708591;
+    width: 110px;
+    font-size: 15px;
+    color: #49631b;
+    white-space: nowrap;
+    font-weight: 600;
+    height: 33px;
+    padding: 5px 58x;
+    position: relative;
+    padding: 2px 7px;
+    left: 103px;
+    top: -12px;
+    border-radius: 5px;
+background: #b9ed70;}
+
 
 
 	}
