--- a/style.css
+++ b/style.css
@@ -697,7 +697,7 @@ top: -32px;}
     line-height: 6px;}
 	
 	#for {
- left: 269px;
+ left: 250px;
     position: relative!important;
     top: -87px !important;
     margin-left: -23px;
@@ -710,7 +710,7 @@ top: -32px;}
     box-shadow: none;
     width: 37px!important;
     line-height: 4px;
-    left: 194px;
+    left: 189px;
     font-size: 10px;
     height: 17px !important;
     top: -109px !important
@@ -816,7 +816,7 @@ top: -32px;}
 	#for {
     position: relative;
        top: -86px !important;
-    left: 38px;
+    left: 22px;
     margin-left: 153px;
   
     width: 43%!important;
@@ -831,7 +831,7 @@ top: -32px;}
     height: 36px;
     font-size: 10px;
     line-height: 2px;
-    left: 167px;
+    left: 156px;
     height: 17px!important;
     top: -109px !important;}
 	
@@ -857,7 +857,7 @@ top: -32px;}
     font-size: 20px;
     color: #49631b;
 	    position: relative !important;
-    left: 125px !important;
+    left: 40px !important;
     white-space: nowrap;
     font-weight: 600;
     height: 33px;
@@ -902,7 +902,7 @@ top: -67px !important;
     line-height: 2px;
     color: #000;
     /* width: 7px!important; */
-    font-size: 11px !important;
+    font-size: 10px !important;
     width: 80px!important;
     height: 16px !important;
     width: 58px!important;}
@@ -916,11 +916,11 @@ top: -67px !important;
 	#for {
 
     position: relative;
-left: 75px;
+left: 49px;
     top: -85px!important;
 
     margin-left: 165px;
-    width: 43%!important;}
+    width: 35%!important;}
 	
 	#bts2 {
     top: -155px;
@@ -931,8 +931,8 @@ left: 75px;
     width: 40px!important;
     height: 38px;
     line-height: 4px;
-    font-size: 11px!important;
-    left: 189px;
+    font-size: 10px!important;
+      left: 169px;
     height: 17px!important;
     top: -107px !important;
 }
@@ -951,8 +951,8 @@ position: relative;
     border-radius: 50%;
     padding: 6px;
     position: absolute;
-    left: 237px;
-    top: 157px;
+       left: 184px;
+    top: 141px;
 
 }
 	
@@ -1313,3 +1313,83 @@ background: #b9ed70;}
 	
 	
 		}
+		
+		@media only screen and (min-device-width: 820px) and (max-device-width: 823px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape){
+.box2 {
+    border: 2px solid #708591;
+    width: 110px;
+    font-size: 20px;
+    color: #49631b;
+    position: relative !important;
+left: 137px !important;}
+
+.camera {
+    width: 28px;
+    height: 28px;
+    background: white;
+    border-radius: 50%;
+    padding: 6px;
+    position: absolute;
+    left: 179px;
+    top: 141px;
+}
+		}
+		
+				@media only screen and (min-device-width: 800px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape){
+		.box2 {
+    border: 2px solid #708591;
+    width: 140px;
+    font-size: 20px;
+    color: #49631b;
+    position: relative !important;
+		left: 140px !important;}
+		
+		.camera {
+    width: 28px;
+    height: 28px;
+    background: white;
+    border-radius: 50%;
+    padding: 6px;
+    position: absolute;
+    left: 232px;
+		top: 141px;}
+		
+				}
+				
+				
+				@media only screen and (min-device-width: 752px) and (max-device-width: 799px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape){
+.box2 {
+    border: 2px solid #708591;
+    width: 110px;
+    font-size: 20px;
+    color: #49631b;
+    position: relative !important;
+left: 113px !important;}
+.camera {
+    width: 28px;
+    height: 28px;
+    background: white;
+    border-radius: 50%;
+    padding: 6px;
+    position: absolute;
+    left: 219px;
+    top: 141px;
+}
+
+
+
+}
+
+				
+				@media only screen and (min-device-width: 813px) and (max-device-width: 873px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape){
+.box2 {
+    border: 2px solid #708591;
+    width: 110px;
+    font-size: 20px;
+    color: #49631b;
+    position: relative !important;
+left: 136px !important;}
+
+.camera{    margin-left: 56px;}
+
+				}
