--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ font-weight: 600;
 }
 .contact{width:100%;height:376px;}
 .company-info{width:100%;height:376px;}
-  body,html{overflow:hidden!important;}
+  body,html{overflow-x:hidden!important;}
 	  .bg-dark{margin-top: -30px;height:35px;}
 	  .cont{padding:15px 0 !important;}
 	  
