--- a/style.css
+++ b/style.css
@@ -1062,6 +1062,7 @@ border-radius: 5px;}
     font-size: 9px;
     width: 37px!important;
 }
+	.club img{width: 18px;}
 #edit{font-size: 16px;margin-top:20px!important;}
 #edit-button{width:16px;}
 
