--- a/style.css
+++ b/style.css
@@ -460,6 +460,20 @@ font-weight: 600;
     background: #000;
 	  color: red;}
 	  
+	  input[type="text"]
+{
+    font-size:13px;color:#000!important;
+}
+	  	  input[type="number"]
+{
+    font-size:13px;color:#000!important;
+}
+		  	  input[type="email"]
+{
+    font-size:13px;color:#000!important;
+}
+	
+	  
 	  input[type=date]{font-size:10px!important;}
 	  
 	  .main-btn {
@@ -522,8 +536,8 @@ font-weight: 600;
     left: 41px!important;
     top: -28px!important;
 }
-.contact{width:100%;height:376px;}
-.company-info{width:100%;height:376px;}
+.contact{width:100%;height:393px;}
+.company-info{width:100%;height:393px;position:relative;}
   body,html{overflow-x:hidden!important;}
 	  .bg-dark{margin-top: -30px;height:35px;}
 	  .cont{padding:15px 0 !important;}
@@ -572,14 +586,14 @@ top: -32px;}
     padding: 6px;
     position: absolute;
     left: 186px;
-    top: 178px;}
+    top: 141px;}
 	
 	.wrapper{display:flex;}
 	
-	legend{    font-size: 14px!important;margin-bottom: 20px!important;
+	legend{    font-size: 19px!important;margin-bottom: 25px!important;
     margin-left: -37px;white-space:nowrap;}
 	
-	label{font-size:11px!important;}
+	label{font-size:16px!important;}
 	
 	    .flx1{position: relative;
     left: -2px;
@@ -614,8 +628,8 @@ top: -32px;}
     margin-left: 125px;
     margin-top: 19px;
     line-height: 16px!important;
-    height: 23px!important;
-    width: 79px!important;
+      height: 29px!important;
+    width: 92px!important;
     line-height: 5px !important;
     font-size: 14px !important;
     position: relative !important;
@@ -624,13 +638,17 @@ top: -32px;}
 }
 
 .contact form button, .contact form input, .contact form textarea {
-    position: relative!important;   height: 15px !important;
-    padding: 7px;top:-45px!important;
-    margin-left: 135px;}
+position: relative!important;
+    height: 20px !important;
+    padding: 7px;
+    left: 17px;
+    top: -49px!important;
+    margin-left: 135px;
+}
 	
 	#selectbasic {
     margin-left: 135px;
-    top: -43px;    height: 15px !important;
+    top: -49px;    height: 20px !important;
     padding: 7px;
     position: relative;
 }
@@ -683,8 +701,8 @@ top: -32px;}
     top: -52px;}
 	
 	#selectbasic {
-    margin-left: 100px;
-    top: -43px;
+    margin-left: 115px;
+    top: -48px;
     width: 137px!important;
     width: 100px;
     position: relative;}
@@ -692,33 +710,35 @@ top: -32px;}
 	.flx7 {
     position: relative;
     left: -2px;
-    top: 56px;
+    top: 50px;
 }
 	
 	#bts {
-        position: relative;
+    position: relative;
     top: -80.5px;
     line-height: 16px;
     color: #000;
-    height: 17px!important;
+    height: 20px!important;
     width: 52px!important;
     height: 37px;
     left: 62px;
-    top: -67px !important;
+    top: -72px !important;
     box-shadow: none;
     white-space: nowrap !important;
     font-size: 11px;
-    line-height: 6px;}
+    line-height: 8px;
+
+}
 	
 	#for {
  left: 250px;
     position: relative!important;
-    top: -87px !important;
+    top: -94px !important;
     margin-left: -23px;
     width: 53%!important;}
 	
 	#bts2 {
-       top: -156px;
+top: -156px;
     line-height: 16px;
     color: #000;
     box-shadow: none;
@@ -726,13 +746,15 @@ top: -32px;}
     line-height: 4px;
     left: 189px;
     font-size: 10px;
-    height: 17px !important;
-    top: -109px !important
+    height: 21px !important;
+    
+    top: -119px !important;
+
 }
 
 .tick {
        position: relative;
-    top: -67px;
+    top: -74px;
     width: 19px;
     left: 225px;
 
@@ -748,7 +770,7 @@ top: -32px;}
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
-  label{font-size:11px!important;}
+  label{font-size:16px!important;}
   
   .camera {
     width: 28px;
@@ -758,7 +780,7 @@ top: -32px;}
     padding: 6px;
     position: absolute;
   left: 194px;
-    top: 166px;
+    top: 125px;
 
 }
 
@@ -772,7 +794,7 @@ top: -32px;}
     height: 15px;    width: 117px !important;
 }
 #selectbasic {
-    margin-left: 65px;
+    margin-left: 83px;
     width: 117px !important;
     position: relative;
     height: 36px;}
@@ -801,22 +823,20 @@ top: -32px;}
 #bts {
     position: relative;
     top: -68.5px;
-    line-height: 5px;
+    line-height: 8px;
     color: #000;
     width: 80px;
     width: 48px !important;
     height: 33px;
     white-space: nowrap;
-      left: 53px;
-    height: 17px!important;
-    top: -69px !important;
+    left: 50px;
+    height: 21px!important;
+    top: -74px !important;
     box-shadow: none;
     font-size: 8px;
-
-}
-	
+}	
 	legend {
-    width: 100%;margin-bottom: 32px !important;
+    width: 100%;margin-bottom: 36px !important;
     position: relative;
     top: -16px;}
 	
@@ -829,7 +849,7 @@ top: -32px;}
 	
 	#for {
     position: relative;
-       top: -86px !important;
+       top: -95px !important;
     left: 22px;
     margin-left: 153px;
   
@@ -846,14 +866,16 @@ top: -32px;}
     font-size: 10px;
     line-height: 2px;
     left: 156px;
-    height: 17px!important;
-    top: -109px !important;}
+    height: 21px!important;
+    top: -119px !important;
+}
 	
 	.tick {
       position: relative;
-    top: -65px;
+    top: -75px;
     width: 16px;
     left: 168px;
+
 }
   
   }
@@ -897,8 +919,8 @@ top: -32px;}
     width: 134px !important;
 }
   #selectbasic {
-    margin-left: 96px;
-    top: -43px;
+       margin-left: 112px;
+    top: -50px;
     width: 136px!important;
     position: relative;}
 	
@@ -910,16 +932,19 @@ top: -32px;}
     margin-left: 121px;
     margin-top: 20px;}
 	
-	#bts {
-top: -67px !important;
+
+#bts {
+    top: -74px !important;
     left: 54px;
     line-height: 2px;
     color: #000;
     /* width: 7px!important; */
     font-size: 10px !important;
     width: 80px!important;
-    height: 16px !important;
-    width: 58px!important;}
+    height: 21px !important;
+    width: 58px!important;
+
+}
 	
 	#mob{position: relative;
     left: -29px;}
@@ -931,13 +956,13 @@ top: -67px !important;
 
     position: relative;
 left: 49px;
-    top: -85px!important;
+    top: -94px!important;
 
     margin-left: 165px;
     width: 53%!important;}
 	
 	#bts2 {
-    top: -155px;
+        top: -155px;
     line-height: 16px;
     color: #000;
     box-shadow: none;
@@ -946,14 +971,15 @@ left: 49px;
     height: 38px;
     line-height: 4px;
     font-size: 10px!important;
-      left: 169px;
-    height: 17px!important;
-    top: -107px !important;
+    left: 169px;
+    height: 21px!important;
+    top: -119px !important;
+
 }
 	
 	.tick {
 position: relative;
-    top: -67px;
+    top: -73px;
     width: 16px;
     left: 214px;
 }
@@ -966,7 +992,7 @@ position: relative;
     padding: 6px;
     position: absolute;
        left: 184px;
-    top: 181px;
+    top: 141px;
 
 }
 	
@@ -984,8 +1010,8 @@ position: relative;
    height: 334px;
     border-radius: 0 0 10px 10px !important;
 }
-	
-	input[type=date]{font-size:10px!important;}
+
+input[type=date]{font-size:10px!important;}
 
 #end-editing:before {
     content: "";
@@ -1051,6 +1077,8 @@ border-radius: 5px;}
 
 #mail{margin-left: 60px;}
 
+.club img{    width: 18px;}
+
 #bts2 {
     top: -98px;
     line-height: 16px;
@@ -1063,7 +1091,6 @@ border-radius: 5px;}
     font-size: 9px;
     width: 37px!important;
 }
-	.club img{width: 18px;}
 #edit{font-size: 16px;margin-top:20px!important;}
 #edit-button{width:16px;}
 
@@ -1361,7 +1388,7 @@ left: 137px !important;}
     padding: 6px;
     position: absolute;
     left: 179px;
-    top: 181px;
+    top: 140px;
 }
 		}
 		
@@ -1382,7 +1409,7 @@ left: 137px !important;}
     padding: 6px;
     position: absolute;
     left: 232px;
-		top: 181px;}
+		top: 141px;}
 		
 				}
 				
@@ -1403,7 +1430,7 @@ left: 82px !important;}
     padding: 6px;
     position: absolute;
     left: 219px;
-    top: 181px;
+    top: 141px;
 }
 
 
