--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 
-
+.veri{display:none;}
 
 #end-editing:before{content:"";position:absolute;left:-100px;bottom:
 0px;width:90px;height:1px;background:#000;color:red;}
@@ -185,7 +185,7 @@ label{    white-space: nowrap;
 }
 
 
-			.flx7{ margin-top: -139px;position: relative;
+			.flx7{ margin-top: -66px;position: relative;
     left: 75px;
 }
 
@@ -627,7 +627,7 @@ top: -32px;}
 }
 
 	    .flx7{position: relative;
-    left: -2px;top: 53px;
+    left: -2px;top: 17px;
 }
 
 
@@ -721,7 +721,7 @@ position: relative!important;
 	.flx7 {
     position: relative;
     left: -2px;
-    top: 50px;
+   
 }
 	
 	#bts {
@@ -1036,7 +1036,7 @@ position: relative;
 @media only screen and (max-width: 600px) {
 	.form-control{font-size:14px!important;}
 
-	
+	.veri{display:none;}
 	.datetime-input-box-wrapper {
     display: inline-flex;
     flex: 1;
@@ -1124,7 +1124,7 @@ border-radius: 5px;}
 #for {
     position: relative;
 top: -43px;
-    left: -114px;
+    left: -116px;
     margin-left: 160px;
     width:61%!important;
 }
@@ -1133,11 +1133,11 @@ top: -43px;
   margin-top: -139px;
     position: relative;
     left: 2px;
-    top: 120px;
+    top: 132px;
 
 }
 
-#mail{margin-left:44px;width: 184px !important;}
+#mail{margin-left:43px;width: 184px !important;}
 
 .club img{    width: 18px;}
 
